# ai-vst3

./: INSTALLATION.md  PRESS.md  README.md  install-lnx.sh  install-mac.sh  install-win.bat  installer.py  main.py  server_interface.py
.github/workflows/: build-all-platforms.yml
core/: api_keys_manager.py  dj_system.py  image_to_sonic.py  layer_manager.py  llm_interface.py  music_generator.py
server/api/: api_request_handler.py  models.py  routes.py
vst/: CMakeLists.txt
vst/src/: AudioAnalyzer.h  ColourPalette.cpp  ColourPalette.h  CustomLookAndFeel.h  DjIaClient.h  DrawingCanvas.h  MasterChannel.cpp  MasterChannel.h  MidiLearnManager.cpp  MidiLearnManager.h  MidiLearnableComponents.h  MidiMappingEditorWindow.cpp  MidiMappingEditorWindow.h  MixerChannel.cpp  MixerChannel.h  MixerPanel.cpp  MixerPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleBank.cpp  SampleBank.h  SampleBankPanel.cpp  SampleBankPanel.h  SequencerComponent.cpp  SequencerComponent.h  StableAudioEngine.cpp  TrackComponent.cpp  TrackComponent.h  TrackData.h  TrackManager.h  WaveformDisplay.cpp  WaveformDisplay.h
